<resources>
    <string name="app_name">Firebase_Authentication</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Moblie Number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="sign_up2">Sign Up</string>
    <string name="sign_up22">Sign Up</string>
    <string name="login1">Login</string>
    <string name="forget_password">Forget Password</string>
</resources>