<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".SignUp_Activity">

    <EditText
        android:id="@+id/edit_email2"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_color"
        android:hint="@string/email_address"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />
    <EditText
        android:id="@+id/edit_password2"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_color"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />
    <Button
        android:id="@+id/login"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/signup2"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up22"/>

    <TextView
        android:id="@+id/forgetpassword"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"/>



</LinearLayout>