<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">
    <!--   line 7: layout padding is change the EditText Size.-->
   <EditText
       android:id="@+id/edit_name"
       android:background="@drawable/edittext_color"
       android:hint="@string/full_name"
       android:padding="10dp"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       />

    <EditText
        android:id="@+id/edit_mobile"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_color"
        android:hint="@string/mobile_number"
        android:maxLength="11"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />

    <EditText
        android:id="@+id/edit_email"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_color"
        android:hint="@string/email_address"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />
    <EditText
        android:id="@+id/edit_password"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_color"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        />
    <Button
        android:id="@+id/signup"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>